fix(infrastructure): update gitignore to allow src/api/models/
Refine gitignore pattern to:
- Ignore /models/ and data/models/ (ML model cache)
- Allow src/api/models/ (API data models code)

This fix was needed for Feature #1 but missed in previous commit.

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,9 @@ Thumbs.db
 .ipynb_checkpoints/
 
 # Model cache (can be large)
-models/
+# Ignore model directories but not src/api/models (API models code)
+/models/
+data/models/
 *.pt
 *.pth
 *.onnx
